# va

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md
.github/workflows/: ci-va-actions.yml  ci-va-activator.yml  ci-va-command.yml  ci-va-voice.yml  ci.yml
crates/app/va-actions/: Cargo.toml  Dockerfile  README.md
crates/app/va-actions/src/: config.rs  main.rs
crates/app/va-activator/: .env.example  Cargo.toml  Dockerfile  README.md  SPEC.md
crates/app/va-activator/src/: config.rs  main.rs
crates/app/va-command/: Cargo.toml  Dockerfile  README.md
crates/app/va-command/src/: config.rs  main.rs
crates/app/va-voice/: .env.example  Cargo.toml  DEPS.md  Dockerfile  README.md  SPEC.md
crates/app/va-voice-server/: Cargo.toml
crates/app/va-voice/src/: audio.rs  config.rs  main.rs  setup.rs
crates/shared/va-skills/: Cargo.toml
crates/shared/va-skills/src/: lib.rs
