[package]
name = "va-actions"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
va-skills = { path = "../../shared/va-skills" }
