[package]
name = "va-activator"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
