[package]
name = "va-activator"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
